@@ -138,6 +138,7 @@ END
 IDR_TORTOISEIDIFF ACCELERATORS 
 BEGIN
     "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_VIEW_ARRANGEVERTICAL, VIRTKEY, CONTROL, NOINVERT
     "F",            ID_VIEW_FITIMAGESINWINDOW, VIRTKEY, NOINVERT
     "i",            ID_VIEW_IMAGEINFO,      ASCII,  NOINVERT
     "S",            ID_VIEW_ORININALSIZE,   VIRTKEY, NOINVERT
@@ -146,7 +147,10 @@ BEGIN
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, NOINVERT
     VK_SUBTRACT,    ID_VIEW_ZOOMOUT,        VIRTKEY, NOINVERT
     VK_ESCAPE,      IDM_EXIT,               VIRTKEY, NOINVERT
-    "V",            ID_VIEW_ARRANGEVERTICAL, VIRTKEY, CONTROL, NOINVERT
+    VK_UP,          ID_VIEW_ALPHA0,         VIRTKEY, NOINVERT
+    VK_DOWN,        ID_VIEW_ALPHA255,       VIRTKEY, NOINVERT
+    VK_LEFT,        ID_VIEW_ALPHA127,       VIRTKEY, NOINVERT
+    VK_RIGHT,       ID_VIEW_ALPHA127,       VIRTKEY, NOINVERT
 END
 
 
