@@ -29,7 +29,6 @@
 #define IDI_ICON2                       143
 #define IDI_STOP                        143
 #define IDI_VERTICAL                    144
-#define IDI_ICON1                       145
 #define IDI_LINK                        145
 #define IDC_LEFTIMAGE                   1000
 #define IDC_RIGHTIMAGE                  1001
@@ -47,6 +46,9 @@
 #define ID_VIEW_ARRANGEVERTICAL         32793
 #define ID_VIEW_ARRANGEHORIZONTAL       32794
 #define ID_VIEW_LINKIMAGESTOGETHER      32797
+#define ID_VIEW_ALPHA0                  32798
+#define ID_VIEW_ALPHA255                32799
+#define ID_VIEW_ALPHA127                32800
 #define IDC_STATIC                      -1
 
 // Next default values for new objects
@@ -55,7 +57,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NO_MFC                     1
 #define _APS_NEXT_RESOURCE_VALUE        146
-#define _APS_NEXT_COMMAND_VALUE         32798
+#define _APS_NEXT_COMMAND_VALUE         32803
 #define _APS_NEXT_CONTROL_VALUE         1004
 #define _APS_NEXT_SYMED_VALUE           110
 #endif
